--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_ACCESSKEY = u-2g6ltWHklieVizeACTnTbvtKksov6JJls4DNUKEJQ
+
+REACT_APP_GOOGLE_KEY = AIzaSyBiZzTC1hUumS42EISzD38qyf_ytqtagNU 
