--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-google-maps": "^9.4.5",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.34.0",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-paginate": "^8.1.3",
