--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Boulder-bike-tour",
   "version": "0.1.0",
+  "homepage": "https://remyduijn.github.io/BoulderBikeTour",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
